<resources>
    <string name="app_name">WiseLi</string>
    <string name="title_activity_circle_detail">CircleDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hey_dude">Hey  WiseLi User,</string>
    <string name="see_whats_going_around">See whats\'s going on around!</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">I have an account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="when_s_your_birthday">When’s your birthday?</string>
    <string name="and_bio">and Bio</string>
    <string name="register_for">Register for</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="number">Number</string>
    <string name="username">Username</string>
    <string name="i_have_a_referal_code">I have a referral code</string>
    <string name="hey_name">Hey, name</string>
    <string name="your_surfer">your surfer</string>
    <string name="welcome">Welcome.</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="tell_about_you_in_two_words">Tell us a little bit about yourself</string>
    <string name="your_bio_must_be_at_least_50_character">Your BIO must be at least 50 character.</string>
    <string name="add_photo">Add Photo</string>
    <string name="resend_otp">Resend Code</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="for_change_phone_number">for change phone number.</string>
    <string name="changed_your_phone_number">Changed your Phone Number</string>
    <string name="for_verfication">for verification</string>
    <string name="enter_your_referral_code">Enter your code here</string>
    <string name="code">Code</string>
    <string name="bio">Bio</string>
    <string name="change_email">Change Email</string>
    <string name="email_address">email address</string>
    <string name="address">address</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="profile_fragment">Profile</string>
    <string name="map_fragment">MapFragment</string>
    <string name="friend_group_fragment">Friends</string>
    <string name="friend_new_user_fragment">Friends</string>
    <string name="group_circles_fragment">Friends</string>
    <string name="app_logout">LogOut</string>
    <string name="landing_fragment">WiseLi</string>
    <string name="circle_detail_fragment">CircleDetailFragment</string>
    <string name="splash_screen_fragment">SplashScreenFragment</string>
    <string name="sign_in_fragment">SignInFragment</string>
    <string name="register_fragment">RegisterFragment</string>
    <string name="sign_in_register_fragment">SignInRegisterFragment</string>
    <string name="list_fragment">ListFragment</string>
    <string name="add_circle">Add Circle</string>
    <string name="save">Save</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>

    <string name="google_maps_api_key">AIzaSyAvUIS0LUpyZ3yDDacbvH7smR1ubMFo8mc</string>

    <string name="file_provider" translatable="false">uk.ac.tees.mad.w9501736.fileprovider</string>

    <string name="pick_single">Please select your image</string>
    <string name="field_empty_error">Field cant be empty</string>
    <string name="empty_string"> </string>

    <string name="snack_error_network">Please turn on your net.</string>
    <string name="snack_error_network_available">Thanks for turning on the Network.</string>
    <string name="snack_error_location">Please Enable Location</string>
    <string name="snack_error_location_null">Please Enable Location And Internet</string>
    <string name="please_provide">Please provide valid Data</string>
    <string name="user_friends_list_null">No user is available please add user in the nav drawer section </string>
    <string name="please_select">Please select Yes to add amount</string>
    <string name="close_list">Do you want to close the list?</string>
    <string name="shop_list_fragment">ShopListDetailFragment</string>

</resources>