<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_navigation"
    app:startDestination="@id/landingFragment">

    <fragment
        android:id="@+id/landingFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.landingPage.LandingFragment"
        android:label="@string/landing_fragment"
        tools:layout="@layout/fragment_landing">

        <action
            android:id="@+id/action_landingFragment_to_circularFragment"
            app:destination="@id/circleDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/circleDetailFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.circleDetailPage.CircleDetailFragment"
        android:label="@string/circle_detail_fragment"
        tools:layout="@layout/fragment_circle_detail">

        <action
            android:id="@+id/action_circleDetailFragment_to_listFragment"
            app:destination="@id/shopListDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/shopListDetailFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.listPage.ShopListDetailFragment"
        android:label="@string/shop_list_fragment"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_listFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/mapFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.mapPage.MapFragment"
        android:label="@string/map_fragment" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.profilePage.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/friendListFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.groupCircles.FriendListFragment"
        android:label="@string/group_circles_fragment"
        tools:layout="@layout/fragment_group_circles" >
        <action
            android:id="@+id/action_groupCirclesFragment_to_findNewUserFragment"
            app:destination="@id/addFriendFragment" />
    </fragment>

    <fragment
        android:id="@+id/addFriendFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.groupCircles.AddFriendFragment"
        android:label="@string/friend_new_user_fragment"
        tools:layout="@layout/fragment_find_new_user" />

    <fragment
        android:id="@+id/logOutFragment"
        android:name="uk.ac.tees.mad.w9501736.ui.fragment.logOutPage.LogoutFragment"
        android:label="@string/app_logout"
        tools:layout="@layout/fragment_logout">

    </fragment>


</navigation>