<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/landingFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/landing_fragment" />
    </group>

    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/profile_fragment" />
        <item
            android:id="@+id/friendListFragment"
            android:icon="@drawable/ic_group"
            android:title="@string/group_circles_fragment" />
    </group>

</menu>